samples/_failures_safe/1761438828_5b5843_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42024324.c: In function ‘main’:
./samples/SAFE/__tmp_42024324.c:131:13: error: expected expression at end of input
  131 |             for (
      |             ^~~
./samples/SAFE/__tmp_42024324.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42024324.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42024324.c:131:13: error: expected declaration or statement at end of input
